src/humangov-rio-de-janeiro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-rio-de-janeiro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-rio-de-janeiro
  template:
    metadata:
      labels:
        app: humangov-python-app-rio-de-janeiro
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
      - name: humangov-python-app-rio-de-janeiro
        image: CONTAINER_IMAGE
---

apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service-rio-de-janeiro
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app-rio-de-janeiro
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx-reverse-proxy-rio-de-janeiro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx-reverse-proxy-rio-de-janeiro
  template:
    metadata:
      labels:
        app: humangov-nginx-reverse-proxy-rio-de-janeiro
    spec:
      containers:
      - name: humangov-nginx-reverse-proxy-rio-de-janeiro
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: humangov-nginx-config-rio-de-janeiro-vol
          mountPath: /etc/nginx/
      volumes:
      - name: humangov-nginx-config-rio-de-janeiro-vol
        configMap:
          name: humangov-nginx-config-rio-de-janeiro

---

apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service-rio-de-janeiro
spec:
  selector:
    app: humangov-nginx-reverse-proxy-rio-de-janeiro
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
