src/humangov-sao-paulo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-sao-paulo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-sao-paulo
  template:
    metadata:
      labels:
        app: humangov-python-app-sao-paulo
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
      - name: humangov-python-app-sao-paulo
        image: CONTAINER_IMAGE
---

apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-service-sao-paulo
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app-sao-paulo
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-nginx-reverse-proxy-sao-paulo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-nginx-reverse-proxy-sao-paulo
  template:
    metadata:
      labels:
        app: humangov-nginx-reverse-proxy-sao-paulo
    spec:
      containers:
      - name: humangov-nginx-reverse-proxy-sao-paulo
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: humangov-nginx-config-sao-paulo-vol
          mountPath: /etc/nginx/
      volumes:
      - name: humangov-nginx-config-sao-paulo-vol
        configMap:
          name: humangov-nginx-config-sao-paulo

---

apiVersion: v1
kind: Service
metadata:
  name: humangov-nginx-service-sao-paulo
spec:
  selector:
    app: humangov-nginx-reverse-proxy-sao-paulo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
